// Copyright 2018 The Cockroach Authors.
// Copyright (c) 2022-present, Shanghai Yunxi Technology Co, Ltd. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// This software (KWDB) is licensed under Mulan PSL v2.
// You can use this software according to the terms and conditions of the Mulan PSL v2.
// You may obtain a copy of Mulan PSL v2 at:
//          http://license.coscl.org.cn/MulanPSL2
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
// EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
// MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
// See the Mulan PSL v2 for more details.


syntax = "proto3";
package kwbase.protectedts;
option go_package = "ptpb";

import "gogoproto/gogo.proto";
//import "google/api/annotations.proto";
import "roachpb/data.proto";
import "util/hlc/timestamp.proto";


// TODO(ajwerner): Consider splitting up Record into two pieces. It would
// probably make for a cleaner Client API. Create with a ProtectedTimestamp
// which returns an ID. This could also be useful if we want to store present
// the CreatedAt timestamp inside the record itself but wanted to allow for
// the record to be mutated. I'm not generally in favor of letting the record
// become mutable but it might be nice to store the verification status
// on the record one day.
//
// message ProtectedTimestamp {
//     hlc.Timestamp timetamp
//     ProtectionMode mode
//     repeated roachpb.Span spans
// }
//
// message Record
//     uuid.UUID id = 1;
//     string metadata_type = 2;
//     bytes  metadata = 3;
//     ProtectedTimestamp protected_timestamp = 4; // embed
// }


// ProtectionMode defines the semantics of a Record.
enum ProtectionMode {
  option (gogoproto.goproto_enum_prefix) = false;

  // PROTECT_AFTER ensures that all data values live at or after the specified
  // timestamp will be protected from GC.
  PROTECT_AFTER = 0;

  // PROTECT_AT ensures that data values which are live at the specified
  // timestamp will be protected but newer data which is no longer live
  // can be GC'd.
  // 
  // TODO(ajwerner): Implement PROTECT_AT. This mode will be useful for
  // incremental GC or for long-running queries. It adds substantial complexity
  // to the GC heuristic and process. Until there is an understood strategy to
  // deal with that complexity we leave it unimplemented.
  // PROTECT_AT = 1;
}

// Metadata is the system metadata. The metadata is stored explicitly and all
// operations which create or release Records increment the version and update
// the metadata fields accordingly.
//
// The version provides a mechanism for cheap caching and forms the basis of
// the implementation of the Tracker. The Tracker needs to provide a recent
// view of the protectedts subsystem for GC to proceed. The protectedts
// state changes rarely. The timestamp of cached state can by updated by
// merely observing that the version has not changed.
message Metadata {

   // Version is incremented whenever a Record is created or removed.
   uint64 version = 1;

   // NumRecords is the number of records which exist in the subsystem.
   uint64 num_records = 2;

   // NumSpans is the number of spans currently being protected by the
   // protectedts subsystem.
   uint64 num_spans = 3;

   // TotalBytes is the number of bytes currently in use by records
   // to store their spans and metadata.
   uint64 total_bytes = 4;
}

// Record corresponds to a protected timestamp.
message Record {

  // ID uniquely identifies this row.
  bytes id = 1 [(gogoproto.customtype) = "gitee.com/kwbasedb/kwbase/pkg/util/uuid.UUID", (gogoproto.nullable) = false, (gogoproto.customname) = "ID"];

  // Timestamp is the timestamp which is protected.
  util.hlc.Timestamp timestamp = 2  [(gogoproto.nullable) = false];

  // Mode specifies whether this record protects all values live at timestamp
  // or all values live at or after that timestamp.
  ProtectionMode mode = 3;

  // MetaType is used to interpret the data stored in Meta.
  // Users of Meta should set a unique value for MetaType which provides enough
  // information to interpret the data in Meta. See the comment on Meta for how
  // these two fields should be used in tandem.
  string meta_type = 4;

  // Meta is client-provided metadata about the record.
  // This data allows the Record to be correlated with data from another
  // subsystem. For example, this field may contain the ID of a job which
  // created this record. The metadata allows an out-of-band reconciliation
  // process to discover and remove records which no longer correspond to
  // running jobs. Such a mechanism acts as a failsafe against unreliable
  // jobs infrastructure.
  bytes meta = 5;

  // Verified marks that this Record is known to have successfully provided
  // protection. It is updated after Verification. Updates to this field do not
  // change the Version of the subsystem.
  bool verified = 6;
  
  // Spans are the spans which this Record protects.
  repeated roachpb.Span spans = 7 [(gogoproto.nullable) = false];
}

// State is the complete system state.
message State {
  Metadata metadata = 1 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
  repeated Record records = 2 [(gogoproto.nullable) = false];
}
